--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,12 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn compile
-    - name: Test with Maven
-      run: mvn test
-    - name: Package with maven
+    - name: compile
+      run: mvn clean install
+    - name: package
       run: mvn package
+    - name: unit test
+      run: mvn test
     - run: mkdir artifact && cp target/*.jar artifact
     - uses: actions/upload-artifact@v2
       with:
