--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,12 +38,10 @@ jobs:
         ls -a
     - name: analize with sonarcloud
       run: mvn verify sonar:sonar -Dsonar.projectKey=mvn- -Dsonar.organization=gh -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=de0f9420847bbbdd9dbd49b1b13e278300abb33e
-  
-    - name: deploying to ec2
-    - uses: actions/checkout@v2
-      with:
-       key: ${{ secrets.SSH_PRIVATE_KEY }}
-       host: 44.202.16.248
-       user: ubuntu
-       port: 22
-       Target: /home/ubuntu
+      
+    - name: Run a multi-line script
+        run:|
+          eval $(ssh-agent -s)
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" |  ssh-add -
+          scp -o StrictHostKeyChecking=no /target/my-app-1.0-SNAPSHOT.jar ubuntu@52.202.54.83:/home/ubuntu
+          ssh -o StrictHostKeyChecking=no ubuntu@$52.202.54.83 "nohup java -jar /home/ubuntu/my-app-1.0-SNAPSHOT.jar &;"
