--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         
     - name: deployment
-      uses: appleboy/ssh-action@v2
+      uses: appleboy/ssh-action@main
       with:
         host: 52.202.54.83
         username: ubuntu
