--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
         user: ubuntu
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         
-    - name: scp to remote
+    - name: Deployment
       uses: cross-the-world/ssh-scp-ssh-pipelines@v1.1.4
       with:
         host: 52.202.54.83
